<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGray">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/mainBlue"
        android:textColor="@color/colorLight"
        android:fontFamily="@font/g_light"
        android:gravity="center_vertical"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu_nav"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="199dp"
        android:layout_height="221dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/icon" />

    <View
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linear_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <TextView
            android:id="@+id/profile_idishka"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:fontFamily="@font/g_light"
            android:text="@string/user_id"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/g_light"
            android:text="@string/bruce_wayne"
            android:textColor="@color/dark_gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_user_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <TextView
            android:id="@+id/profile_sobachka"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/g_light"
            android:text="@string/sobachka"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/g_light"
            android:text="@string/batman"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/mainBlue"
        android:fontFamily="@font/g_light"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/ic_color_of_cursor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_username" />

    <ProgressBar
        android:id="@+id/progressBarProfile"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/mainBlue"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout"
        app:layout_constraintVertical_bias="0.09" />
</androidx.constraintlayout.widget.ConstraintLayout>