<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGray">

    <LinearLayout
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/mainBlue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.242">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/g_light"
            android:text="@string/sign_in"
            android:textColor="@color/mainBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:cursorVisible="true"
            android:fontFamily="@font/g_light"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="@color/textGray"
            android:textColorHint="#bababa"
            android:textCursorDrawable="@drawable/ic_color_of_cursor"
            android:textSize="18sp"
            android:autofillHints="asiknurmukhambet"
            android:inputType="text" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:fontFamily="@font/g_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#bababa"
            android:textColorHint="#bababa"
            android:textCursorDrawable="@drawable/ic_color_of_cursor"
            android:textSize="18sp"
            android:autofillHints="Qqwerty1!" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back"
            android:fontFamily="@font/g_light"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/ic_color_of_cursor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/g_light"
                android:text="@string/new_user"
                android:textColor="#bababa"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_link_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/g_light"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/mainBlue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/g_light"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/mainBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
